[gd_scene load_steps=2 format=3 uid="uid://roster_panel001"]

[ext_resource type="Script" path="res://ui/roster_panel.gd" id="1_script"]

[node name="RosterPanel" type="CanvasLayer"]
layer = 50
script = ExtResource("1_script")

[node name="Panel" type="PanelContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -250.0
offset_right = 300.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="Header" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Title" type="Label" parent="Panel/VBox/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "Roster"
theme_override_font_sizes/font_size = 18

[node name="CloseBtn" type="Button" parent="Panel/VBox/Header"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "X"

[node name="FilterRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="AllBtn" type="Button" parent="Panel/VBox/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
button_pressed = true
text = "All"

[node name="FarmersBtn" type="Button" parent="Panel/VBox/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Farmers"

[node name="GuardsBtn" type="Button" parent="Panel/VBox/FilterRow"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = true
text = "Guards"

[node name="HeaderRow" type="HBoxContainer" parent="Panel/VBox"]
layout_mode = 2

[node name="Name" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Name"
alignment = 0

[node name="Job" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "Job"
alignment = 0

[node name="Level" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Lv â–¼"
alignment = 0

[node name="HP" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "HP"
alignment = 0

[node name="State" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "State"
alignment = 0

[node name="Trait" type="Button" parent="Panel/VBox/HeaderRow"]
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
text = "Trait"
alignment = 0

[node name="Scroll" type="ScrollContainer" parent="Panel/VBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="List" type="VBoxContainer" parent="Panel/VBox/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="CountLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
horizontal_alignment = 1
